--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 		<div id="home-center">
 			<h1 id="home-title">The Shropshire DM</h1>
 			<nav id="home-nav" class="site-nav">
-				
+				<a href="http://localhost:1313/about-me/">About</a>
 			</nav>
 		</div>
 		<div id="home-footer"><p>
